// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 1`] = `
<Translated
  status="pending"
>
  <StatusMessage
    status="pending"
    t={[Function]}
  />
</Translated>
`;

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 2`] = `
<Translated
  status="fail"
>
  <StatusMessage
    status="fail"
    t={[Function]}
  >
    <Message
      content="signupFailed.content"
      header="signupFailed.headline"
      icon="warning sign"
      warning={true}
    >
      <div
        className="ui icon warning message"
      >
        <Icon
          as="i"
          name="warning sign"
        >
          <i
            aria-hidden="true"
            className="warning sign icon"
          />
        </Icon>
        <MessageContent>
          <div
            className="content"
          >
            <MessageHeader
              content="signupFailed.headline"
            >
              <div
                className="header"
              >
                signupFailed.headline
              </div>
            </MessageHeader>
            <p>
              signupFailed.content
            </p>
          </div>
        </MessageContent>
      </div>
    </Message>
  </StatusMessage>
</Translated>
`;

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 3`] = `
<Translated
  status="success"
>
  <StatusMessage
    status="success"
    t={[Function]}
  >
    <Message
      content="signupSuccess.content"
      header="signupSuccess.headline"
      icon="checkmark"
      success={true}
    >
      <div
        className="ui icon success message"
      >
        <Icon
          as="i"
          name="checkmark"
        >
          <i
            aria-hidden="true"
            className="checkmark icon"
          />
        </Icon>
        <MessageContent>
          <div
            className="content"
          >
            <MessageHeader
              content="signupSuccess.headline"
            >
              <div
                className="header"
              >
                signupSuccess.headline
              </div>
            </MessageHeader>
            <p>
              signupSuccess.content
            </p>
          </div>
        </MessageContent>
      </div>
    </Message>
  </StatusMessage>
</Translated>
`;

exports[`\`StatusMessage\` is rendered correctly with the status being \`PENDING\` 4`] = `
<Translated
  status="in_progress"
>
  <StatusMessage
    status="in_progress"
    t={[Function]}
  >
    <Message
      icon={true}
      success={true}
    >
      <div
        className="ui icon success message"
      >
        <Icon
          as="i"
          loading={true}
          name="circle notched"
        >
          <i
            aria-hidden="true"
            className="circle notched loading icon"
          />
        </Icon>
        <MessageContent>
          <div
            className="content"
          >
            <MessageHeader>
              <div
                className="header"
              >
                inProgress.headline
              </div>
            </MessageHeader>
            inProgress.content
          </div>
        </MessageContent>
      </div>
    </Message>
  </StatusMessage>
</Translated>
`;
